# llm-router

./: .envrc  .flake8  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SETUP.md  _copier_answers.yml  pyproject.toml  typos.toml
.devcontainer/: Dockerfile  Dockerfile.ci  devcontainer.json
.github/: MAINTAINER_SETUP.md  dependabot.yml  pull_request_template.md
.github/actions/setup-dev-env/: action.yml
.github/verification/: sanitized-import-smoke.txt
.github/workflows/: build-ci-image.yml  ci.yml  project-issue-246-apply-refactor-v2.yml  project-issue-246-apply-refactor.yml  project-issue-246-bootstrap.yml  project-issue-246-boundary-apply-v2.yml  project-issue-246-boundary-diagnostics.yml  project-issue-246-boundary-v2-diagnostics.yml  project-issue-246-refactor.yml  project-issue-246-validation.yml  release.yml
.issue246/: APPLY_REFACTOR_V2  FAILED  READY  RUN  migrate.py  refactor-part-00.py  refactor-part-01.py  refactor-part-02.py  refactor-part-03.py
docs/: README.md
docs/llm_router/: README.md  dependencies.md  usage.md
docs/llm_router/architecture/: README.md  system.md
docs/llm_router/implementation/: README.md  capability-normalization.md  config-and-snapshots.md  observability-and-errors.md  provider-adapters.md  request-lifecycle.md  routing-and-limits.md  session-persistence.md  verification.md
docs/llm_router/verification/: README.md  property-based-testing.md  public-boundary-and-errors.md  workbench.md
examples/: __init__.py
examples/llm_router/: __init__.py
scripts/: README.md
scripts/_shared/: project_config.py
scripts/checks/: check_public_contract_private_references.py  check_reusable_zones_project_references.py
scripts/env/: doctor.sh
scripts/runtime/: reproduce_running_loop.py
scripts/smoke/: installed_artifact.py  public_api.py
src/llm_router/: __init__.py
src/llm_router/_api/: __init__.py  config.py  contracts.py  defaults.py  errors.py  presets.py  router.py  session.py  types.py
src/llm_router/_internal/: __init__.py  errors.py  ids.py  output.py
src/llm_router/_support/: __init__.py  error_formatting.py  logging.py
tests/: README.md  __init__.py
tests/llm_router/: __init__.py  conftest.py
tests/llm_router/e2e/: README.md  __init__.py
tests/llm_router/integration/: __init__.py  test_aistudio_adapter_fake.py  test_config_lifecycle.py  test_gemini_webapi_adapter_fake.py  test_google_genai_adapter_fake.py  test_internal_concurrency_isolation.py  test_internal_logging_observability.py  test_internal_retry_repair_output_pipeline.py  test_internal_routing_policy.py  test_openai_compatible_adapter_fake_server.py  test_qwenchat_adapter_fake.py
tests/llm_router/property_based/: __init__.py
tests/llm_router/support/: __init__.py  _vcr_body_matching.py  assertions.py  builders.py  fault_server.py  runtime.py  vcr_extensions.py
tests/llm_router/unit/: __init__.py  test_internal_adapter_cache_safety.py  test_internal_aistudio_dispatch.py  test_internal_aistudio_schema_transform.py  test_internal_boundary_imports.py  test_internal_config_snapshots.py  test_internal_config_validation.py  test_internal_content_normalization.py  test_internal_effective_settings.py  test_internal_error_translation.py  test_internal_gemini_webapi_payloads.py  test_internal_gemini_webapi_response_parsing.py  test_internal_google_genai_payloads.py  test_internal_google_genai_response_parsing.py  test_internal_key_resolution.py  test_internal_limiter.py  test_internal_logging_events.py  test_internal_openai_compatible_payloads.py  test_internal_openai_compatible_response_parsing.py  test_internal_output_normalization.py  test_internal_provider_port.py  test_internal_provider_retry.py  test_internal_qwenchat_payloads.py  test_internal_qwenchat_response_parsing.py  test_internal_root_exports.py  test_internal_route_expansion.py  test_internal_route_order.py  test_internal_schema_normalization.py  test_internal_session_serialization.py  test_internal_session_store.py  test_internal_structured_repair.py  test_internal_tool_registry.py  test_internal_usage_normalization.py  test_no_workbench_imports.py  test_public_package.py
tests/support/: __init__.py  _console_appearance.py  _vcr_shared.py  console.py  e2e_vcr_guard.py  paths.py  setup.py  vcr_matchers.py
workbench/: __init__.py
workbench/llm_router/: __init__.py  _retry_demo.py
workbench/llm_router/aistudio/: README.md  __init__.py  _json_schema.py  _native_media.py  _sdk_helpers.py  _structured_output.py  _tool_loop.py  image_structured.py  models_list.py  pdf_structured.py  retry_text_generation_async.py  schema_ref_resolution.py  text_generation_async.py  tool_choice_named_structured.py  tool_loop_structured_async.py  video_file_structured.py  video_url_structured.py
workbench/llm_router/gemini_webapi/: README.md  __init__.py  _opera_cookie_client.py  _structured_output.py  _tool_loop.py  image_structured.py  pdf_structured.py  retry_text_generation_async.py  runtime_preflight.py  text_generation_async.py  tool_choice_named_structured.py  tool_loop_structured_async.py  video_file_structured.py  video_url_structured.py
workbench/llm_router/google_genai/: README.md  __init__.py  _media_parts.py  _sdk_helpers.py  _structured_output.py  _tool_loop.py  image_structured.py  models_list.py  pdf_structured.py  retry_text_generation_async.py  text_generation_async.py  tool_choice_named_structured.py  tool_loop_structured_async.py  video_file_structured.py  video_url_structured.py
workbench/llm_router/openai/: README.md  __init__.py  _sdk_helpers.py  _structured_output.py  _tool_loop.py  image_structured.py  logprobs_text_generation.py  retry_text_generation_async.py  text_generation_async.py  tool_choice_named_structured.py  tool_loop_structured_async.py
workbench/llm_router/qwenchat/: README.md  __init__.py  _chat_completions.py  _runtime.py  _structured_output.py  _structured_runner.py  _tool_loop.py  _uploads.py  image_structured.py  message_parts_mixed.py  (+6 more)
(+201 files in other folders)
